<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:onClick="registrarDatos"
        android:text="Registrar"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscar"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbxRojo" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="100dp"
        android:onClick="buscar"
        android:text="Buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbxRojo" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="eliminarRopa"
        android:text="ELIMINAR"
        app:layout_constraintEnd_toEndOf="@+id/btnBuscar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnBuscar"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscar" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="limpiarComponentes"
        android:text="Limpiar"
        app:layout_constraintEnd_toEndOf="@+id/btnRegistrar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrar" />

    <EditText
        android:id="@+id/txtCosto"
        android:layout_width="304dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/costo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCodigo" />

    <EditText
        android:id="@+id/txtCodigo"
        android:layout_width="304dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="111dp"
        android:layout_height="136dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/txtCosto"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/rbChico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chica" />

        <RadioButton
            android:id="@+id/rbMediano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediana" />

        <RadioButton
            android:id="@+id/rbGrande"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grande" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="Dias"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCosto"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/cbxBlanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/blanco"
        app:layout_constraintBottom_toTopOf="@+id/cbxRojo"
        app:layout_constraintStart_toStartOf="@+id/cbxNegro" />

    <CheckBox
        android:id="@+id/cbxRojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="17dp"
        android:text="@string/rojo"
        app:layout_constraintEnd_toEndOf="@+id/cbxBlanco"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cbxBlanco"
        app:layout_constraintTop_toBottomOf="@+id/cbxBlanco" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="124dp"
        android:text="Personas"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/cbxNegro"
        app:layout_constraintEnd_toEndOf="@+id/txtCosto"
        app:layout_constraintTop_toBottomOf="@+id/txtCosto"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/cbxTipo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/negro"
        app:layout_constraintBottom_toTopOf="@+id/cbxBlanco"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/cbxAzul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="30dp"
        android:text="@string/azul"
        app:layout_constraintBottom_toTopOf="@+id/cbxBlanco"
        app:layout_constraintEnd_toEndOf="@+id/txtCosto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/cbxNegro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/negro"
        app:layout_constraintBottom_toTopOf="@+id/cbxBlanco"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/cbxNaranja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naranja"
        app:layout_constraintEnd_toEndOf="@+id/cbxAzul"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="@+id/cbxAzul"
        app:layout_constraintTop_toBottomOf="@+id/cbxAzul" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="293dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrar"
        app:layout_constraintTop_toBottomOf="@+id/cbxRojo"
        app:layout_constraintVertical_bias="0.471"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="52dp" />


</androidx.constraintlayout.widget.ConstraintLayout>